movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/prod/deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindscope-admin
  namespace: mindscope-prod
  labels:
    app: mindscope-admin
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mindscope-admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mindscope-admin
        environment: prod
    spec:
      containers:
        - name: admin
          image: 786180311928.dkr.ecr.ap-northeast-2.amazonaws.com/mindscope-prod/admin:v1.6.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
