movies/26IRDEMO/_tool/saas-center-platform/infra/k8s/prod/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindscope-api-svc
  namespace: mindscope-prod
  labels:
    app: mindscope-api
spec:
  selector:
    app: mindscope-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
